# TeleSave

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: start.sh
telesave/: __init__.py  config.py  logging.py  main.py
telesave/bot/: dispatcher.py  handlers.py  messages.py
telesave/core/: errors.py  limits.py  models.py  security.py
telesave/downloaders/: base.py  direct.py  metadata.py  router.py  ytdlp.py
telesave/infra/: health.py  tempfiles.py
telesave/telegram/: captions.py  sender.py
tests/: test_limits.py  test_metadata.py  test_router_security.py  test_security.py
