[project]
name = "telesave"
version = "0.1.0"
description = "Production-ready Telegram downloader bot for Hugging Face Spaces."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.6,<4.0",
    "aiofiles>=23.2,<25.0",
    "aiohttp>=3.9,<4.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "yt-dlp>=2024.5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
